docs: 更新 Base 模块的 API 文档；编写部分 Position 模块的 API 文档；

--- a/api/pug/base/section.pug
+++ b/api/pug/base/section.pug
@@ -5,6 +5,7 @@ section.section
     p dom.js 提供以下方法用以创建或查询 DOM 元素等基础 DOM 操作。
   include ./createElement
   include ./clone
+  include ./canPosition
   include ./closet
   include ./contains
   include ./byClass
@@ -14,6 +15,7 @@ section.section
   include ./getOffsetParent
   include ./getScrollParent
   include ./index
+  include ./inDocument
   include ./isInBounding
   include ./isInViewport
   include ./isMatched
