--- a/api/pug/position/section.pug
+++ b/api/pug/position/section.pug
@@ -17,5 +17,6 @@ section.section
   include ./getScrollTotal
   include ./getScrollTotalLeft
   include ./getScrollTotalTop
-  include ./scrollTo
   include ./offset
+  include ./positions
+  include ./scrollTo
