--- a/api/pug/style/prop.pug
+++ b/api/pug/style/prop.pug
@@ -5,7 +5,7 @@ section.section
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd Style
-    p $emit()方法用来获取 CSS 样式的属性或者为一个声明了 CSS 样式的对象设置一个新的值。
+    p prop() 方法用来获取 CSS 样式的属性或者为一个声明了 CSS 样式的对象设置一个新的值。
     h4.section__h4 Parameters
     h5.section__h4 prop
     dl.section__dl
