--- a/api/pug/types/isDOM.pug
+++ b/api/pug/types/isDOM.pug
@@ -33,5 +33,5 @@ section.section
         DOM.isDOM($fragment) // -> true
         DOM.isElement($items) // -> false
         isDOM($items) // -> true
-        isText($text) // -> true
+        isTextNode($text) // -> true
         isDOM($text) // -> true
