--- a/api/pug/types/isText.pug
+++ b/api/pug/types/isText.pug
@@ -1,11 +1,11 @@
 section.section
   header.section__header
-    h3.section__h3 isText(el)
+    h3.section__h3 isTextNode(el)
   div.section__content
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd Node Type Detection
-    p isText() 方法用来检测测试数据是否为 HTMLTextNode (文本节点)类型。
+    p isTextNode() 方法用来检测测试数据是否为 HTMLTextNode (文本节点)类型。
     h4.section__h4 Parameters
     h5.section__h4 el
     dl.section__dl
@@ -21,8 +21,8 @@ section.section
       code.section__code.
         // 引入 DOM 模块（中的所有工具方法）
         import DOM from '@yaohaixiao/dom.js/dom'
-        // 或者单独引用 isText() 方法
-        import isText from '@yaohaixiao/dom.js/isText'
+        // 或者单独引用 isTextNode() 方法
+        import isTextNode from '@yaohaixiao/dom.js/isTextNode'
 
         const $list = document.getElementById('list')
         const $div = document.createElement('div')
@@ -31,16 +31,16 @@ section.section
         const $text = document.createTextNode('text')
 
         DOM.isElement($list) // -> true
-        DOM.isText($list) // -> false
+        DOM.isTextNode($list) // -> false
 
         DOM.isElement($div) // -> true
-        DOM.isText($div) // -> false
+        DOM.isTextNode($div) // -> false
 
         DOM.isFragment($fragment) // -> true
-        DOM.isText($fragment) // -> false
+        DOM.isTextNode($fragment) // -> false
 
-        DOM.isCollection($items) // -> true
+        DOM.isHTMLCollection($items) // -> true
         DOM($items) // -> false
 
         DOM.isElement($text) // -> false
-        isText($text) // -> true
+        isTextNode($text) // -> true
