test: 完成所有 Base 子模块所有方法的单测代码编写；添加部分 Attributes 子模块方法的单测代码；

--- a/api/pug/attributes/getAttributes.pug
+++ b/api/pug/attributes/getAttributes.pug
@@ -5,7 +5,7 @@ section.section
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd Attributes
-    p getAttribute() 方法用来获取 DOM 元素的多个 DOM 属性值。
+    p getAttribute() 方法用来获取 DOM 元素的单个或多个 HTML 属性值（键/值对象）。
     h4.section__h4 Parameters
     h5.section__h4 el
     dl.section__dl
