--- a/api/pug/base/section.pug
+++ b/api/pug/base/section.pug
@@ -16,8 +16,8 @@ section.section
   include ./getScrollParent
   include ./index
   include ./inDocument
-  include ./isInBounding
-  include ./isInViewport
+  include inBounding
+  include inViewport
   include ./isMatched
   include ./matches
   include ./parent
