--- a/api/pug/base/section.pug
+++ b/api/pug/base/section.pug
@@ -11,13 +11,15 @@ section.section
   include ./byClass
   include ./byId
   include ./getEl
+  include ./find
+  include ./findAll
   include ./getHostOrParent
   include ./getOffsetParent
   include ./getScrollParent
   include ./index
   include ./inDocument
-  include inBounding
-  include inViewport
+  include ./inBounding
+  include ./inViewport
   include ./isMatched
   include ./matches
   include ./parent
