docs: 更新 API 文档，修复其中的一些参数名称错误问题；

--- a/api/pug/attributes/replaceClass.pug
+++ b/api/pug/attributes/replaceClass.pug
@@ -12,12 +12,12 @@ section.section
       dt.section__dt Type：
       dd.section__dd HTMLElement
     p （必须）el 参数指定需要替换 class 样式的 DOM 元素。
-    h5.section__h4 className
+    h5.section__h4 oldCls
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd String
     p （必须）oldCls 要替换的 class 样式名称。
-    h5.section__h4 className
+    h5.section__h4 newCls
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd String
