--- a/api/pug/base/closet.pug
+++ b/api/pug/base/closet.pug
@@ -22,7 +22,7 @@ section.section
       dt.section__dt Type：
       dd.section__dd HTMLElement
     p （可选）ctx 指定比对的 DOM 元素
-    h5.section__h4 ctx
+    h5.section__h4 includeCTX
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd Boolean
