--- a/api/pug/base/contains.pug
+++ b/api/pug/base/contains.pug
@@ -12,7 +12,7 @@ section.section
       dt.section__dt Type：
       dd.section__dd HTMLElement|String
     p （必须）被包含的 DOM 元素或者 DOM 元素的选择器字符串：
-    h5.section__h4 el
+    h5.section__h4 ancestor
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd HTMLElement|String
