--- a/api/pug/style/getStyle.pug
+++ b/api/pug/style/getStyle.pug
@@ -13,7 +13,7 @@ section.section
       dt.section__dt Type：
       dd.section__dd HTMLElement
     p （必须）el 参数指定 DOM 元素。
-    h5.section__h4 token
+    h5.section__h4 attr
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd String
