--- a/api/pug/style/getStyles.pug
+++ b/api/pug/style/getStyles.pug
@@ -7,15 +7,15 @@ section.section
       dd.section__dd Style
     p getStyles() 方法用来设置或者获取初始化时配置的 attrs 信息的。
     h4.section__h4 Parameters
-    h5.section__h4 prop
+    h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd String|HTMLElement
     p （可选）options 中的属性名称或者要配置的 attrs 信息。
-    h5.section__h4 value
+    h5.section__h4 attrs
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd Any
+      dd.section__dd String|Object
     p （可选）要设置的 prop 属性的值
     ul
       li 不传递任何参数：返回完整的 attrs 配置信息；
