feat: 添加 toHex() 方法和 toRGB() 方法；添加 color 子模块；

--- a/api/pug/main.pug
+++ b/api/pug/main.pug
@@ -7,6 +7,7 @@ main#main.main
   article#article
     include ./attributes/section
     include ./base/section
+    include ./color/section
     include ./insertion/section
     include ./position/section
     include ./sibling/section
