--- a/api/pug/sibling/siblings.pug
+++ b/api/pug/sibling/siblings.pug
@@ -1,6 +1,6 @@
 section.section
   header.section__header
-    h3.section__h3 siblings(el[, includeSelf = false])
+    h3.section__h3 siblings(el[, includeSelf])
   div.section__content
     dl.section__dl
       dt.section__dt Category：
