--- a/api/pug/color/toRGB.pug
+++ b/api/pug/color/toRGB.pug
@@ -1,17 +1,17 @@
 section.section
   header.section__header
-    h3.section__h3 toRGB(val)
+    h3.section__h3 toRGB(color)
   div.section__content
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd Color
     p toHex() 方法用来将指定颜色（16 进制色值）转化成 RGB 色值。
     h4.section__h4 Parameters
-    h5.section__h4 val
+    h5.section__h4 color
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd String
-    p （必须）el 参数指定指定颜色。
+    p （必须）color 参数指定指定颜色。
     h5.section__h4 Returns
     dl.section__dl
       dt.section__dt Type：
