feat: 添加 getColor() 方法;

--- a/api/pug/color/section.pug
+++ b/api/pug/color/section.pug
@@ -3,5 +3,6 @@ section.section
     h2.section__title Color
   div.section__content
     p dom.js 提供以下方法用于处理 DOM 元素的颜色值相关的操作。
+  include ./getColor
   include ./toHex
   include ./toRGB
