--- a/api/pug/style/toggle.pug
+++ b/api/pug/style/toggle.pug
@@ -10,15 +10,15 @@ section.section
     h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd String
+      dd.section__dd HTMLElement
     p （必须）el 参数指定 DOM 元素。
     pre.section__pre
       code.section__code.
         &lt;ul id="list" class="list"&gt;
-            &lt;li class="item active"&gt;Home&lt;/li&gt;
-            &lt;li class="item"&gt;Blog&lt;/li&gt;
-            &lt;li class="item"&gt;Projects&lt;/li&gt;
-            &lt;li class="item"&gt;About&lt;/li&gt;
+          &lt;li class="item active"&gt;Home&lt;/li&gt;
+          &lt;li class="item"&gt;Blog&lt;/li&gt;
+          &lt;li class="item"&gt;Projects&lt;/li&gt;
+          &lt;li class="item"&gt;About&lt;/li&gt;
         &lt;/ul&gt;
 
         // 引入 DOM 模块（中的所有工具方法）
@@ -33,5 +33,5 @@ section.section
         DOM.getStyle($list, 'display') // -> 'hidden'
 
         // 显示 $list
-        DOM.toggle($list)
+        toggle($list)
         DOM.getStyle($list, 'display') // -> 'block'
