--- a/api/pug/base/find.pug
+++ b/api/pug/base/find.pug
@@ -5,6 +5,9 @@ section.section
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd Base
+    dl.section__dl
+      dt.section__dt Since：
+      dd.section__dd 0.4.0
     p 返回文档（document）中与指定的选择器组匹配的第一个 DOM 元素。
     h4.section__h4 Parameters
     h5.section__h4 selector
