--- a/api/pug/color/getColor.pug
+++ b/api/pug/color/getColor.pug
@@ -5,6 +5,9 @@ section.section
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd Color
+    dl.section__dl
+      dt.section__dt Since：
+      dd.section__dd 0.4.0
     p getColor() 方法用来获取 DOM 元素指定的颜色值。可指定获取 16 进制色值或者 RGB 色值。
     h4.section__h4 Parameters
     h5.section__h4 el
