--- a/api/pug/attributes/section.pug
+++ b/api/pug/attributes/section.pug
@@ -14,6 +14,9 @@ section.section
   include ./setAttributes
   include ./removeAttribute
   include ./removeAttributes
+  include ./getValue
+  include ./setValue
   include ./attrs
   include ./html
   include ./text
+  include ./val
