--- a/api/pug/sibling/section.pug
+++ b/api/pug/sibling/section.pug
@@ -4,14 +4,16 @@ section.section
   div.section__content
     p dom.js 提供以下几个方法用于获取指定 DOM 元素的邻居节点。
   include ./getNextSibling
-  include ./getPrevSibling
-  include ./getNextSiblings
-  include ./getPrevSiblings
+  include ./getPreviousSibling
   include ./getNextSiblingBy
-  include ./getPrevSiblingBy
+  include ./getPreviousSiblingBy
+  include ./getNextSiblings
+  include ./getPreviousSiblings
   include ./getSiblings
   include ./prev
   include ./next
+  include ./prevBy
+  include ./nextBy
   include ./prevAll
   include ./nextAll
   include ./siblings
