feat: 添加 show() 和 hide() 方法，调整 toggle() 方法逻辑；添加 replace() 方法；

--- a/api/pug/insertion/after.pug
+++ b/api/pug/insertion/after.pug
@@ -5,7 +5,7 @@ section.section
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd DOM Insertion
-    p after() 方法用来将在指定 DOM 节点后添加子节点或者将 HTML 字符转化成节点添加到后面。
+    p after() 方法用来在指定 DOM 节点后添加子节点或者将 HTML 字符转化成节点添加到后面。
     h4.section__h4 Parameters
     h5.section__h4 el
     dl.section__dl
