--- a/api/pug/insertion/section.pug
+++ b/api/pug/insertion/section.pug
@@ -9,7 +9,8 @@ section.section
   include ./insertHTMLAfterEnd
   include ./insertHTMLBeforeBegin
   include ./insertHTMLBeforeEnd
-  include ./after
-  include ./before
   include ./append
   include ./prepend
+  include ./after
+  include ./before
+  include ./replace
