--- a/api/pug/style/section.pug
+++ b/api/pug/style/section.pug
@@ -11,4 +11,6 @@ section.section
   include ./setProperty
   include ./css
   include ./prop
+  include ./show
+  include ./hide
   include ./toggle
