--- a/api/pug/style/hide.pug
+++ b/api/pug/style/hide.pug
@@ -5,6 +5,9 @@ section.section
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd Style
+    dl.section__dl
+      dt.section__dt Since：
+      dd.section__dd 1.1.0
     p hide() 方法用来隐藏指定的 DOM 元素。
     h4.section__h4 Parameters
     h5.section__h4 el
