--- a/api/pug/insertion/section.pug
+++ b/api/pug/insertion/section.pug
@@ -14,3 +14,7 @@ section.section
   include ./after
   include ./before
   include ./replace
+  include ./unwrap
+  include ./wrap
+  include ./wrapAll
+  include ./wrapInner
