test: 添加 1.1.0 版本中新添加方法的单测；

--- a/api/pug/base/section.pug
+++ b/api/pug/base/section.pug
@@ -3,6 +3,7 @@ section.section
     h2.section__title Base
   div.section__content
     p dom.js 提供以下方法用以创建或查询 DOM 元素等基础 DOM 操作。
+  include ./build
   include ./createElement
   include ./clone
   include ./canPosition
