docs: 添加 pixel() 、disable() 等方法的 API 文档；重新打包文件；

--- a/api/pug/attributes/section.pug
+++ b/api/pug/attributes/section.pug
@@ -17,6 +17,9 @@ section.section
   include ./getValue
   include ./setValue
   include ./attrs
+  include ./enable
+  include ./disable
+  include ./readonly
   include ./html
   include ./text
   include ./val
