--- a/api/pug/base/build.pug
+++ b/api/pug/base/build.pug
@@ -4,7 +4,7 @@ section.section
   div.section__content
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Attributes
+      dd.section__dd Base
     dl.section__dl
       dt.section__dt Since：
       dd.section__dd 1.1.0
