feat: 添加 toHSL() 方法和相应的 API 文档；调整 toRGB() 和 toHex() 方法，增加对 HSL 格式的色值转化；

--- a/api/pug/color/section.pug
+++ b/api/pug/color/section.pug
@@ -5,4 +5,5 @@ section.section
     p dom.js 提供以下方法用于处理 DOM 元素的颜色值相关的操作。
   include ./getColor
   include ./toHex
+  include ./toHSL
   include ./toRGB
