--- a/api/pug/color/toHex.pug
+++ b/api/pug/color/toHex.pug
@@ -8,7 +8,7 @@ section.section
     dl.section__dl
       dt.section__dt Since：
       dd.section__dd 0.4.0
-    p toHex() 方法用来将指定颜色（颜色英文名称或RGB格式色值）转化成 16 进制色值。
+    p toHex() 方法用来将指定颜色（颜色英文名称、RGB格式或者 HSL 格式色值）转化成 16 进制色值。
     h4.section__h4 Parameters
     h5.section__h4 color
     dl.section__dl
@@ -42,3 +42,4 @@ section.section
 
         DOM.toHex(DOM.getStyle($list, 'color')) // '#000'
         toHex(DOM.getStyle($list, 'background-color')) // '#ffffff'
+        toRGB('hsl(0,100%,50%)') // -> '#ff0000'
