feat: 添加 remove() 方法并添加对应的 API 文档；

--- a/api/less/section.less
+++ b/api/less/section.less
@@ -53,6 +53,11 @@
     color: @success_color;
   }
 
+  p.section__dd {
+    display: block;
+    margin: 1em auto;
+  }
+
   &__pre {
     margin: 2em 0;
     padding: 1em;
