--- a/api/pug/attributes/val.pug
+++ b/api/pug/attributes/val.pug
@@ -2,12 +2,11 @@ section.section
   header.section__header
     h3.section__h3 val(el, value)
   div.section__content
+    h4.section__h4 Since
+    p.section__dd 0.5.0
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd Attributes
-    dl.section__dl
-      dt.section__dt Since：
-      dd.section__dd 0.5.0
     p val() 方法用来获取或者设置 DOM （表单）元素的 value 属性值。
     h4.section__h4 Parameters
     h5.section__h4 el
