--- a/api/pug/base/build.pug
+++ b/api/pug/base/build.pug
@@ -2,12 +2,11 @@ section.section
   header.section__header
     h3.section__h3 build(str)
   div.section__content
+    h4.section__h4 Since
+    p.section__dd 1.1.0
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd Base
-    dl.section__dl
-      dt.section__dt Since：
-      dd.section__dd 1.1.0
     p build() 方法用来将 HTML 字符串解析生成 DOM 节点。
     p 注意：build() 方法与 html() 方法的不同指出在于 build() 方法返回的是 HTML 字符串解析后生成 DOM 元素，而 html() 方法返回的是包含 HTML 字符串解析后生成 DOM 元素的文档碎片。
     h4.section__h4 Parameters
