--- a/api/pug/base/pixel.pug
+++ b/api/pug/base/pixel.pug
@@ -2,12 +2,11 @@ section.section
   header.section__header
     h3.section__h3 pixel(val)
   div.section__content
+    h4.section__h4 Since
+    p.section__dd 1.2.0
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd Base
-    dl.section__dl
-      dt.section__dt Since：
-      dd.section__dd 1.2.0
     p pixel() 方法用来将 CSS 单位值('px')和数值互换。
     h4.section__h4 Parameters
     h5.section__h4 val
