--- a/api/pug/insertion/unwrap.pug
+++ b/api/pug/insertion/unwrap.pug
@@ -2,12 +2,11 @@ section.section
   header.section__header
     h3.section__h3 unwrap(collection, selector)
   div.section__content
+    h4.section__h4 Since
+    p.section__dd 1.1.0
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd DOM Insertion
-    dl.section__dl
-      dt.section__dt Since：
-      dd.section__dd 1.1.0
     p wrap() 方法用来从 DOM 中移除匹配元素集的父元素，将匹配的元素保留在它们的位置。
     h4.section__h4 Parameters
     h5.section__h4 collection
