--- a/api/pug/style/hide.pug
+++ b/api/pug/style/hide.pug
@@ -2,12 +2,11 @@ section.section
   header.section__header
     h3.section__h3 hide(el)
   div.section__content
+    h4.section__h4 Since
+    p.section__dd 1.1.0
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd Style
-    dl.section__dl
-      dt.section__dt Since：
-      dd.section__dd 1.1.0
     p hide() 方法用来隐藏指定的 DOM 元素。
     h4.section__h4 Parameters
     h5.section__h4 el
