--- a/api/pug/attributes/enable.pug
+++ b/api/pug/attributes/enable.pug
@@ -2,12 +2,11 @@ section.section
   header.section__header
     h3.section__h3 enable(el)
   div.section__content
+    h4.section__h4 Since
+    p.section__dd 1.2.0
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd Attribute
-    dl.section__dl
-      dt.section__dt Since：
-      dd.section__dd 1.2.0
     p enable() 方法用来将启用指定 DOM 元素。
     h4.section__h4 Parameters
     h5.section__h4 el
