--- a/api/pug/attributes/readonly.pug
+++ b/api/pug/attributes/readonly.pug
@@ -2,12 +2,11 @@ section.section
   header.section__header
     h3.section__h3 readonly(el)
   div.section__content
+    h4.section__h4 Since
+    p.section__dd 1.2.0
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd Attribute
-    dl.section__dl
-      dt.section__dt Since：
-      dd.section__dd 1.2.0
     p readonly() 方法用来启用或者取消 DOM 元素的只读模式。
     h4.section__h4 Parameters
     h5.section__h4 el
