--- a/api/pug/attributes/setValue.pug
+++ b/api/pug/attributes/setValue.pug
@@ -2,12 +2,11 @@ section.section
   header.section__header
     h3.section__h3 setValue(el, val)
   div.section__content
+    h4.section__h4 Since
+    p.section__dd 0.5.0
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd Attributes
-    dl.section__dl
-      dt.section__dt Since：
-      dd.section__dd 0.5.0
     p getValue() 方法用来给 DOM （表单）元素设置 value 属性值。
     h4.section__h4 Parameters
     h5.section__h4 el
