--- a/api/pug/base/find.pug
+++ b/api/pug/base/find.pug
@@ -2,12 +2,11 @@ section.section
   header.section__header
     h3.section__h3 find(selector)
   div.section__content
+    h4.section__h4 Since
+    p.section__dd 0.4.0
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd Base
-    dl.section__dl
-      dt.section__dt Since：
-      dd.section__dd 0.4.0
     p 返回文档（document）中与指定的选择器组匹配的第一个 DOM 元素。
     h4.section__h4 Parameters
     h5.section__h4 selector
