--- a/api/pug/base/inBounding.pug
+++ b/api/pug/base/inBounding.pug
@@ -2,12 +2,11 @@ section.section
   header.section__header
     h3.section__h3 inBounding(child, parent)
   div.section__content
+    h4.section__h4 Since
+    p.section__dd 0.2.0
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd Base
-    dl.section__dl
-      dt.section__dt Since：
-      dd.section__dd 0.2.0
     p inBounding() 方法用来检测某个 DOM 节点的位置是否在另个一个 DOM 节点范围内。
     h4.section__h4 Parameters
     h5.section__h4 child
