--- a/api/pug/base/inViewport.pug
+++ b/api/pug/base/inViewport.pug
@@ -2,12 +2,11 @@ section.section
   header.section__header
     h3.section__h3 inViewport(el)
   div.section__content
+    h4.section__h4 Since
+    p.section__dd 0.2.0
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd Base
-    dl.section__dl
-      dt.section__dt Since：
-      dd.section__dd 0.2.0
     p inViewport() 方法用来检测某个 DOM 节点的位置是否在当前视口（当前窗口可见区域）之内。
     h4.section__h4 Parameters
     h5.section__h4 el
