--- a/api/pug/color/toHex.pug
+++ b/api/pug/color/toHex.pug
@@ -2,12 +2,11 @@ section.section
   header.section__header
     h3.section__h3 toHex(color)
   div.section__content
+    h4.section__h4 Since
+    p.section__dd 0.4.0
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd Color
-    dl.section__dl
-      dt.section__dt Since：
-      dd.section__dd 0.4.0
     p toHex() 方法用来将指定颜色（颜色英文名称、RGB格式或者 HSL 格式色值）转化成 16 进制色值。
     h4.section__h4 Parameters
     h5.section__h4 color
