--- a/api/pug/insertion/replace.pug
+++ b/api/pug/insertion/replace.pug
@@ -2,12 +2,11 @@ section.section
   header.section__header
     h3.section__h3 replace(el, reference)
   div.section__content
+    h4.section__h4 Since
+    p.section__dd 1.1.0
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd DOM Insertion
-    dl.section__dl
-      dt.section__dt Since：
-      dd.section__dd 1.1.0
     p replace() 方法用来将 DOM 节点或者 HTML 字符转化成 DOM 节点，已替换指定的 DOM 节点。
     h4.section__h4 Parameters
     h5.section__h4 el
