--- a/api/pug/insertion/wrapAll.pug
+++ b/api/pug/insertion/wrapAll.pug
@@ -2,12 +2,11 @@ section.section
   header.section__header
     h3.section__h3 wrapAll(collection, wrapElement)
   div.section__content
+    h4.section__h4 Since
+    p.section__dd 1.1.0
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd DOM Insertion
-    dl.section__dl
-      dt.section__dt Since：
-      dd.section__dd 1.1.0
     p wrapAll() 方法用来给（以组邻近的）NodeList 包裹上指定的 HTML 标签。
     h4.section__h4 Parameters
     h5.section__h4 collection
