--- a/api/pug/insertion/wrapInner.pug
+++ b/api/pug/insertion/wrapInner.pug
@@ -2,12 +2,11 @@ section.section
   header.section__header
     h3.section__h3 wrapInner(collection, wrapElement)
   div.section__content
+    h4.section__h4 Since
+    p.section__dd 1.1.0
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd DOM Insertion
-    dl.section__dl
-      dt.section__dt Since：
-      dd.section__dd 1.1.0
     p wrapInner() 方法用来给 NodeList 中的每个 DOM 节点内部包裹上指定 HTML 标签。
     h4.section__h4 Parameters
     h5.section__h4 collection
