--- a/api/pug/insertion/prepend.pug
+++ b/api/pug/insertion/prepend.pug
@@ -5,7 +5,7 @@ section.section
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd DOM Insertion
-    p prepend() 方法用来将指定 DOM 节点或者 html 文本解析为 DOM 元素，并将结果节点插入 el 元素自身内部的最前面。
+    p prepend() 方法用来将指定 DOM 节点或者 html 文本解析为 DOM 元素，并将结果节点插入 reference 元素自身内部的最前。
     h4.section__h4 Parameters
     h5.section__h4 el
     dl.section__dl
