fix: 修复 insertBefore 和 insertAfter 中的非法值判断错误；调整 append() 和 prepend() 方法的代码逻辑

--- a/api/pug/color/toHex.pug
+++ b/api/pug/color/toHex.pug
@@ -41,4 +41,4 @@ section.section
 
         DOM.toHex(DOM.getStyle($list, 'color')) // '#000'
         toHex(DOM.getStyle($list, 'background-color')) // '#ffffff'
-        toRGB('hsl(0,100%,50%)') // -> '#ff0000'
+        toHex('hsl(0,100%,50%)') // -> '#ff0000'
