feat: 添加方法：copyToClipboard()、createAndDownloadFile()、isBrowser()、openURL() 等方法，并更新相应的 API 文档；

--- a/api/pug/base/section.pug
+++ b/api/pug/base/section.pug
@@ -4,6 +4,8 @@ section.section
   div.section__content
     p dom.js 提供以下方法用以创建或查询 DOM 元素等基础 DOM 操作。
   include ./build
+  include ./copyToClipboard
+  include ./createAndDownloadFile
   include ./createElement
   include ./clone
   include ./canPosition
@@ -17,13 +19,19 @@ section.section
   include ./getHostOrParent
   include ./getOffsetParent
   include ./getScrollParent
+  include ./getURLProps
+  include ./getURLSearchParams
+  include ./getURLSearchParamByName
+  include ./toURLSearchParams
   include ./index
+  include ./isBrowser
   include ./inDocument
   include ./inBounding
   include ./inViewport
   include ./isMatched
   include ./matches
   include ./children
+  include ./openURL
   include ./parent
   include ./pixel
   include ./serialize
