--- a/api/pug/size/section.pug
+++ b/api/pug/size/section.pug
@@ -7,6 +7,9 @@ section.section
   include ./getDocumentWidth
   include ./getViewportHeight
   include ./getViewportWidth
+  include ./getScreenHeight
+  include ./getScreenWidth
+  include ./getScrollbarWidth
   include ./innerHeight
   include ./innerWidth
   include ./outerHeight
