feat: 添加 injectCSS() 方法，并添加相应的 API 文档；

--- a/api/pug/style/section.pug
+++ b/api/pug/style/section.pug
@@ -9,6 +9,7 @@ section.section
   include ./setStyles
   include ./getProperty
   include ./setProperty
+  include ./injectCSS
   include ./css
   include ./prop
   include ./show
